elk/filebeat.yaml
apiVersion: v1
kind: Pod
metadata:
  name: filebeat-test-pod
  namespace: default
spec:
  containers:
  - name: filebeat
    image: docker.elastic.co/beats/filebeat:8.17.0
    args: ["-c", "/usr/share/filebeat/filebeat.yml", "-e"]
    volumeMounts:
    - name: config-volume
      mountPath: /usr/share/filebeat/filebeat.yml
      subPath: filebeat.yml
    - name: certs-volume
      mountPath: /etc/filebeat_ssl
    - name: samples-volume
      mountPath: /var/log/samples
    - name: logs-volume
      mountPath: /var/log/app
  - name: log-writer
    image: busybox
    command:
      - /bin/sh
      - -c
      - |
        trap 'echo "Exit..."; exit' SIGINT SIGTERM;
        while true; do
          echo "$(date '+%Y-%m-%d %H:%M:%S') [main] INFO Sidecar log" >> /var/log/app/app.log;
          sleep 4;
        done
    volumeMounts:
    - name: logs-volume
      mountPath: /var/log/app
  volumes:
  - name: config-volume
    configMap:
      name: filebeat-config
  - name: certs-volume
    secret:
      secretName: filebeat-es-certs
      items:
      - key: tls.crt
        path: elasticsearch-ca.pem
  - name: samples-volume
    configMap:
      name: filebeat-samples
      items:
        - key: sample.log
          path: sample.log
  - name: logs-volume
    emptyDir: {}
---
